<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/portfolio_app_background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:text="@string/my_title"
        android:textColor="@color/title"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:background="@color/portfolio_button_background"
        android:elevation="2dp"
        android:padding="15dp"
        android:text="@string/media_streamer"
        android:textColor="@color/portfolio_button_text"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignStart="@+id/button1"
        android:layout_below="@+id/button1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:width="230dp"
        android:background="@color/portfolio_button_background"
        android:elevation="2dp"
        android:padding="15dp"
        android:text="@string/super_duo1"
        android:textColor="@color/portfolio_button_text"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:width="230dp"
        android:background="@color/portfolio_button_background"
        android:elevation="2dp"
        android:padding="15dp"
        android:text="@string/super_duo2"
        android:textColor="@color/portfolio_button_text"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:width="230dp"
        android:background="@color/portfolio_button_background"
        android:elevation="2dp"
        android:padding="15dp"
        android:text="@string/ant_terminator"
        android:textColor="@color/portfolio_button_text"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:width="230dp"
        android:background="@color/portfolio_button_background"
        android:elevation="2dp"
        android:padding="15dp"
        android:text="@string/materialize"
        android:textColor="@color/portfolio_button_text"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:width="230dp"
        android:background="@color/portfolio_capstone_button_background"
        android:elevation="2dp"
        android:padding="15dp"
        android:text="@string/capstone"
        android:textColor="@color/portfolio_button_text"
        android:textSize="16sp" />

</LinearLayout>
